# blackjack

./: .gitignore  BUILD  Cargo.bzl  Cargo.toml  README.md  WORKSPACE  blackjack.bzl  cargo_dependencies.bzl  workspace.bzl
.github/workflows/: main.yml
src/: lib.rs
tests/: run.sh
tests/linkc/: BUILD  Cargo.toml  WORKSPACE  cargo_dependencies.bzl
tests/linkc/src/: main.rs
tests/no_dependencies/: .gitignore  BUILD  Cargo.toml  WORKSPACE  cargo_dependencies.bzl
tests/platform_specific/: BUILD  Cargo.toml  WORKSPACE  bazel-bin  bazel-out  bazel-platform_specific  bazel-testlogs  cargo_dependencies.bzl
tests/platform_specific/src/: main.rs
tests/popular_crates/: BUILD  Cargo.toml  WORKSPACE  cargo_dependencies.bzl
tests/workspace/: BUILD  Cargo.toml  WORKSPACE  cargo_dependencies.bzl
tests/workspace/crate1/: BUILD  Cargo.toml
tests/workspace/crate1/src/: main.rs
tests/workspace/crate2/: BUILD  Cargo.toml
tests/workspace/crate2/src/: main.rs
