[package]
name = "blackjack"
version = "0.1.0"
authors = ["Daan de Graaf <daandegraaf9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo-lock = "4.0"

[package.metadata.blackjack]
prefix = "blackjack_crates_io"
