[package]
name = "blackjack"
version = "0.1.0"
authors = ["Daan de Graaf <daandegraaf9@gmail.com>"]
edition = "2021"

[dependencies]
cargo_metadata = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo-lock = "6.0"
cfg-expr = "0.7"

[package.metadata.blackjack]
prefix = "blackjack_crates_io"
