[package]
name = "linkc"
version = "0.1.0"
authors = ["Daan de Graaf <daandegraaf9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }

[package.metadata.blackjack.libz-sys]
replace = "@libz_sys"
