[package]
name = "popular_crates"
version = "0.1.0"
authors = ["Daan de Graaf <daandegraaf9@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
diesel = "1.4"

# These settings are unnecessary because blackjack provides them by default
#[package.metadata.blackjack.proc-macro2]
#rustc_flags = ["--cfg=use_proc_macro"]
#
#[package.metadata.blackjack.proc-macro-nested]
#build_script = true
